[gd_scene load_steps=62 format=3 uid="uid://dowrjcdnnxods"]

[ext_resource type="Script" path="res://scripts/sad_man.gd" id="1_wtxo7"]
[ext_resource type="Texture2D" uid="uid://bphhi462bgb11" path="res://art/CharacterAnimation/Kawiak_sad/Kawiak_walk_00000.png" id="2_hjqxg"]
[ext_resource type="Script" path="res://scripts/state_machine/Idle.gd" id="3_kjit3"]
[ext_resource type="Script" path="res://scripts/state_machine/StateMachine.gd" id="3_q2x24"]
[ext_resource type="Texture2D" uid="uid://f6vqob7aigej" path="res://art/CharacterAnimation/Kawiak_sad/Kawiak_walk_00002.png" id="4_jwqtv"]
[ext_resource type="Script" path="res://scripts/state_machine/Following.gd" id="5_o78q0"]
[ext_resource type="Texture2D" uid="uid://u6t20kw7lhdl" path="res://art/CharacterAnimation/Kawiak_sad/Kawiak_walk_00004.png" id="6_5uoh0"]
[ext_resource type="Script" path="res://scripts/state_machine/Laughing.gd" id="7_btwq4"]
[ext_resource type="AudioStream" uid="uid://c3q0mleruo2wg" path="res://audio/Objects/Laugh/A_Crowd_Laugh_01.wav" id="8_m2jpo"]
[ext_resource type="Texture2D" uid="uid://cyew8xhltncnp" path="res://art/CharacterAnimation/Kawiak_sad/Kawiak_walk_00006.png" id="8_sm5ti"]
[ext_resource type="AudioStream" uid="uid://ltk3o5i7i347" path="res://audio/Objects/Laugh/A_Crowd_Laugh_02.wav" id="9_v0tvv"]
[ext_resource type="AudioStream" uid="uid://bhcutxbf3gb04" path="res://audio/Objects/Laugh/A_Crowd_Laugh_03.wav" id="10_5olv7"]
[ext_resource type="Texture2D" uid="uid://c04yuw86pho1i" path="res://art/CharacterAnimation/Kawiak_sad/Kawiak_walk_00008.png" id="10_liq27"]
[ext_resource type="AudioStream" uid="uid://52akspnbh31w" path="res://audio/Objects/Laugh/A_Crowd_Laugh_04.wav" id="11_q5hps"]
[ext_resource type="Texture2D" uid="uid://cbcktvm8soe1s" path="res://art/CharacterAnimation/Kawiak_sad/Kawiak_walk_00010.png" id="12_jfeft"]
[ext_resource type="AudioStream" uid="uid://4howgexykh8x" path="res://audio/Objects/Laugh/A_Crowd_Laugh_05.wav" id="12_ne6cm"]
[ext_resource type="Texture2D" uid="uid://6p0xlbwpww7r" path="res://art/CharacterAnimation/Kawiak_sad/Kawiak_walk_00012.png" id="14_ana3q"]
[ext_resource type="Texture2D" uid="uid://di1w8t6v3ey07" path="res://art/CharacterAnimation/Kawiak_sad/Kawiak_walk_00014.png" id="16_3ra78"]
[ext_resource type="Texture2D" uid="uid://xre3rb4su51u" path="res://art/CharacterAnimation/Kawiak_sad/Kawiak_walk_00016.png" id="18_oaean"]
[ext_resource type="Texture2D" uid="uid://cdjsjbgu7ly0q" path="res://art/CharacterAnimation/Kawiak_sad/Kawiak_walk_00018.png" id="20_c5s4s"]
[ext_resource type="Texture2D" uid="uid://cqj7q7xal2ltp" path="res://art/CharacterAnimation/Kawiak_sad/Kawiak_walk_00020.png" id="22_gr70m"]
[ext_resource type="Texture2D" uid="uid://cqwn5jo4fqiq6" path="res://art/CharacterAnimation/Kawiak_sad/Kawiak_walk_00022.png" id="24_cg0p2"]
[ext_resource type="Texture2D" uid="uid://dn8lvpey0bfq" path="res://art/CharacterAnimation/Kawiak_sad/Kawiak_walk_00024.png" id="26_w7phf"]
[ext_resource type="Texture2D" uid="uid://ujvxrl6l0rs3" path="res://art/CharacterAnimation/Kawiak_sad/Kawiak_walk_00026.png" id="28_0oqlh"]
[ext_resource type="Texture2D" uid="uid://dqihk30a700bj" path="res://art/CharacterAnimation/Kawiak_sad/Kawiak_walk_00028.png" id="30_e1tdq"]
[ext_resource type="Texture2D" uid="uid://df3clmb746qxk" path="res://art/CharacterAnimation/Kawiak_sad/Kawiak_walk_00030.png" id="32_0u74d"]
[ext_resource type="Texture2D" uid="uid://cjvvjkmg1w3kx" path="res://art/CharacterAnimation/Kawiak_sad/Kawiak_walk_00032.png" id="34_8ngil"]
[ext_resource type="Texture2D" uid="uid://d0xsuidbsjupl" path="res://art/CharacterAnimation/Kawiak_sad/Kawiak_walk_00034.png" id="36_8c21a"]
[ext_resource type="Texture2D" uid="uid://dmt68342cfwtr" path="res://art/CharacterAnimation/Kawiak_sad/Kawiak_walk_00036.png" id="38_62b00"]
[ext_resource type="Texture2D" uid="uid://csjesjht55skj" path="res://art/CharacterAnimation/Kawiak_sad/Kawiak_walk_00038.png" id="40_vb3yd"]
[ext_resource type="Texture2D" uid="uid://3ow4n5q8ykpa" path="res://art/CharacterAnimation/Kawiak_sad/Kawiak_walk_00040.png" id="42_yc0ki"]
[ext_resource type="Texture2D" uid="uid://bnprewsfreu8a" path="res://art/CharacterAnimation/Kawiak_sad/Kawiak_walk_00042.png" id="44_7op8r"]
[ext_resource type="Texture2D" uid="uid://d4capggakrm3x" path="res://art/CharacterAnimation/Kawiak_sad/Kawiak_walk_00044.png" id="46_vqqg7"]
[ext_resource type="Texture2D" uid="uid://w7purqw055u6" path="res://art/CharacterAnimation/Kawiak_sad/Kawiak_walk_00046.png" id="48_hq3vu"]
[ext_resource type="Texture2D" uid="uid://eqo8gwxuvklq" path="res://art/CharacterAnimation/Kawiak_frame/Kawiak_Jump_frame_00000.png" id="50_p4vpg"]
[ext_resource type="Texture2D" uid="uid://ddsnfqdiigo7x" path="res://art/CharacterAnimation/Kawiak_frame/Kawiak_Jump_frame_00002.png" id="52_jhg28"]
[ext_resource type="Texture2D" uid="uid://brgpcgqr8nhv3" path="res://art/CharacterAnimation/Kawiak_frame/Kawiak_Jump_frame_00004.png" id="54_awt88"]
[ext_resource type="Texture2D" uid="uid://dvk5xfj0o6w4l" path="res://art/CharacterAnimation/Kawiak_frame/Kawiak_Jump_frame_00006.png" id="56_cphjl"]
[ext_resource type="Texture2D" uid="uid://cjcjkncjcn65e" path="res://art/CharacterAnimation/Kawiak_frame/Kawiak_Jump_frame_00008.png" id="58_68p70"]
[ext_resource type="Texture2D" uid="uid://nwppobuw6nen" path="res://art/CharacterAnimation/Kawiak_frame/Kawiak_Jump_frame_00010.png" id="60_iklu1"]
[ext_resource type="Texture2D" uid="uid://dtjij68bmsfj1" path="res://art/CharacterAnimation/Kawiak_frame/Kawiak_Jump_frame_00012.png" id="62_i6rj3"]
[ext_resource type="Texture2D" uid="uid://dbp0poyowgyfc" path="res://art/CharacterAnimation/Kawiak_frame/Kawiak_Jump_frame_00014.png" id="64_l2mlc"]
[ext_resource type="Texture2D" uid="uid://dr5ccyvvrnqsg" path="res://art/CharacterAnimation/Kawiak_frame/Kawiak_Jump_frame_00016.png" id="66_0p7ms"]
[ext_resource type="Texture2D" uid="uid://b6tg3an4jpnby" path="res://art/CharacterAnimation/Kawiak_frame/Kawiak_Jump_frame_00018.png" id="68_x3bnw"]
[ext_resource type="Texture2D" uid="uid://dxgb3q76dnhpb" path="res://art/CharacterAnimation/Kawiak_frame/Kawiak_Jump_frame_00020.png" id="70_m8t0e"]
[ext_resource type="Texture2D" uid="uid://botyrdhdvg1nb" path="res://art/CharacterAnimation/Kawiak_frame/Kawiak_Jump_frame_00022.png" id="72_5ei4y"]
[ext_resource type="Texture2D" uid="uid://clxhrf252iyn3" path="res://art/CharacterAnimation/Kawiak_frame/Kawiak_Jump_frame_00024.png" id="74_kqywf"]
[ext_resource type="Texture2D" uid="uid://gid87eyaajbe" path="res://art/jajcarz-ciasto-krem02.png" id="76_1ybnh"]
[ext_resource type="Texture2D" uid="uid://cl2xpi2hr5tfh" path="res://art/CharacterAnimation/Kawiak_frame/Kawiak_Jump_frame_00026.png" id="76_amb8t"]
[ext_resource type="Texture2D" uid="uid://7blhlgfhv5xn" path="res://art/jajcarz-ciasto-spod02.png" id="77_hlu7g"]
[ext_resource type="Texture2D" uid="uid://c3hvhxvykrwcl" path="res://art/CharacterAnimation/Kawiak_frame/Kawiak_Jump_frame_00028.png" id="78_bv5bg"]
[ext_resource type="Texture2D" uid="uid://dwgw2gqi8brwo" path="res://art/CharacterAnimation/Kawiak_frame/Kawiak_Jump_frame_00030.png" id="80_juywu"]
[ext_resource type="Texture2D" uid="uid://c1644n1n3yrf4" path="res://art/CharacterAnimation/Kawiak_frame/Kawiak_Jump_frame_00032.png" id="82_anp4h"]
[ext_resource type="Texture2D" uid="uid://cqwe1lfdl0nug" path="res://art/CharacterAnimation/Kawiak_frame/Kawiak_Jump_frame_00034.png" id="84_r2nub"]
[ext_resource type="Texture2D" uid="uid://daortcrl5w202" path="res://art/CharacterAnimation/Kawiak_frame/Kawiak_Jump_frame_00036.png" id="86_qer42"]
[ext_resource type="Texture2D" uid="uid://ccm24m60yvjd6" path="res://art/CharacterAnimation/Kawiak_frame/Kawiak_Jump_frame_00038.png" id="88_kyt8g"]

[sub_resource type="SpriteFrames" id="SpriteFrames_wtm5c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_hjqxg")
}, {
"duration": 1.0,
"texture": ExtResource("4_jwqtv")
}, {
"duration": 1.0,
"texture": ExtResource("6_5uoh0")
}, {
"duration": 1.0,
"texture": ExtResource("8_sm5ti")
}, {
"duration": 1.0,
"texture": ExtResource("10_liq27")
}, {
"duration": 1.0,
"texture": ExtResource("12_jfeft")
}, {
"duration": 1.0,
"texture": ExtResource("14_ana3q")
}, {
"duration": 1.0,
"texture": ExtResource("16_3ra78")
}, {
"duration": 1.0,
"texture": ExtResource("18_oaean")
}, {
"duration": 1.0,
"texture": ExtResource("20_c5s4s")
}, {
"duration": 1.0,
"texture": ExtResource("22_gr70m")
}, {
"duration": 1.0,
"texture": ExtResource("24_cg0p2")
}, {
"duration": 1.0,
"texture": ExtResource("26_w7phf")
}, {
"duration": 1.0,
"texture": ExtResource("28_0oqlh")
}, {
"duration": 1.0,
"texture": ExtResource("30_e1tdq")
}, {
"duration": 1.0,
"texture": ExtResource("32_0u74d")
}, {
"duration": 1.0,
"texture": ExtResource("34_8ngil")
}, {
"duration": 1.0,
"texture": ExtResource("36_8c21a")
}, {
"duration": 1.0,
"texture": ExtResource("38_62b00")
}, {
"duration": 1.0,
"texture": ExtResource("40_vb3yd")
}, {
"duration": 1.0,
"texture": ExtResource("42_yc0ki")
}, {
"duration": 1.0,
"texture": ExtResource("44_7op8r")
}, {
"duration": 1.0,
"texture": ExtResource("46_vqqg7")
}, {
"duration": 1.0,
"texture": ExtResource("48_hq3vu")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("50_p4vpg")
}, {
"duration": 1.0,
"texture": ExtResource("52_jhg28")
}, {
"duration": 1.0,
"texture": ExtResource("54_awt88")
}, {
"duration": 1.0,
"texture": ExtResource("56_cphjl")
}, {
"duration": 1.0,
"texture": ExtResource("58_68p70")
}, {
"duration": 1.0,
"texture": ExtResource("60_iklu1")
}, {
"duration": 1.0,
"texture": ExtResource("62_i6rj3")
}, {
"duration": 1.0,
"texture": ExtResource("64_l2mlc")
}, {
"duration": 1.0,
"texture": ExtResource("66_0p7ms")
}, {
"duration": 1.0,
"texture": ExtResource("68_x3bnw")
}, {
"duration": 1.0,
"texture": ExtResource("70_m8t0e")
}, {
"duration": 1.0,
"texture": ExtResource("72_5ei4y")
}, {
"duration": 1.0,
"texture": ExtResource("74_kqywf")
}, {
"duration": 1.0,
"texture": ExtResource("76_amb8t")
}, {
"duration": 1.0,
"texture": ExtResource("78_bv5bg")
}, {
"duration": 1.0,
"texture": ExtResource("80_juywu")
}, {
"duration": 1.0,
"texture": ExtResource("82_anp4h")
}, {
"duration": 1.0,
"texture": ExtResource("84_r2nub")
}, {
"duration": 1.0,
"texture": ExtResource("86_qer42")
}, {
"duration": 1.0,
"texture": ExtResource("88_kyt8g")
}],
"loop": true,
"name": &"laughing",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_q607b"]
radius = 23.0
height = 96.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_niccl"]
bg_color = Color(0.341176, 0.341176, 0.341176, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rtoln"]
bg_color = Color(1, 1, 0, 1)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_4pejl"]
streams_count = 5
stream_0/stream = ExtResource("8_m2jpo")
stream_0/weight = 1.0
stream_1/stream = ExtResource("9_v0tvv")
stream_1/weight = 1.0
stream_2/stream = ExtResource("10_5olv7")
stream_2/weight = 1.0
stream_3/stream = ExtResource("11_q5hps")
stream_3/weight = 1.0
stream_4/stream = ExtResource("12_ne6cm")
stream_4/weight = 1.0

[node name="Sad man" type="CharacterBody2D" groups=["Cakeables", "Sadman"]]
script = ExtResource("1_wtxo7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
position = Vector2(4.76837e-07, -29)
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_wtm5c")
frame = 15
frame_progress = 0.304841
offset = Vector2(25.0001, -15.0001)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("3_q2x24")
starting_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("3_kjit3")
animation_name = "default"

[node name="IdleTimer" type="Timer" parent="StateMachine/Idle"]
one_shot = true
autostart = true

[node name="Following" type="Node" parent="StateMachine"]
script = ExtResource("5_o78q0")
animation_name = "default"

[node name="Laughing" type="Node" parent="StateMachine" node_paths=PackedStringArray("next_state")]
script = ExtResource("7_btwq4")
next_state = NodePath("../Idle")
animation_name = "laughing"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_q607b")

[node name="HappinessBar" type="ProgressBar" parent="."]
offset_left = -28.0
offset_top = -51.0
offset_right = 27.0
offset_bottom = -44.0
theme_override_styles/background = SubResource("StyleBoxFlat_niccl")
theme_override_styles/fill = SubResource("StyleBoxFlat_rtoln")
show_percentage = false

[node name="HitboxArea" type="Area2D" parent="."]

[node name="HitboxAreaCollision" type="CollisionShape2D" parent="HitboxArea"]
shape = SubResource("CapsuleShape2D_q607b")

[node name="HappyDepleteTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="GotCakedTimer" type="Timer" parent="."]
one_shot = true

[node name="LaughingPlayer" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_4pejl")

[node name="getCakedIdiotSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(-29, -9)
rotation = 3.47361
scale = Vector2(0.07, 0.07)
skew = 0.279253
texture = ExtResource("76_1ybnh")

[node name="Sprite2D" type="Sprite2D" parent="getCakedIdiotSprite"]
position = Vector2(170.682, 455.402)
rotation = -2.09452
scale = Vector2(1.3, 1.66947)
skew = -0.23911
texture = ExtResource("77_hlu7g")
flip_v = true

[node name="LaughPosition" type="Marker2D" parent="."]
position = Vector2(0, -82)

[connection signal="timeout" from="StateMachine/Idle/IdleTimer" to="StateMachine/Idle" method="_on_idle_timer_timeout"]
[connection signal="area_entered" from="HitboxArea" to="." method="_on_hitbox_area_area_entered"]
[connection signal="area_exited" from="HitboxArea" to="." method="_on_hitbox_area_area_exited"]
[connection signal="timeout" from="HappyDepleteTimer" to="." method="_on_happy_deplete_timer_timeout"]
[connection signal="timeout" from="GotCakedTimer" to="." method="_on_got_caked_timer_timeout"]
